fix(style): align dashboard title left

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 }
 h3 {
-  text-align: center; margin-bottom: 0;
+  margin-bottom: 0;
 }
 [class*='col-'] {
   padding-right: 20px;
